--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <p class="text-success">A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape. Croissants and other viennoiserie are made of a layered yeast-leavened dough
     </p>
     <img src="/images/crois.jpeg" width="500" />
-    <div class="mt-5 d-flex justify-content-between" >
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
-    </div>
+    <footer>
+      <div class="m-5 text-center" >
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+      </div>
+    </footer>
   </body>
 </html>
