--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,10 @@
         <a href="emailto:hello@croissant.com">hello@croissant.com</a> 
         for more info
     </p>
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <footer>
+     <a href="/">Homepage</a>
+     <a href="/photo.html">Photo</a>
+     <a href="/contact.html">Contact</a>
+    </footer>
 </body>
 </html>
